# Ember

./: .editorconfig  .gitattributes  .gitignore  .mailmap  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  EMBER.md  LICENSE  README.md  SECURITY.md  pyproject.toml
agent/: package.json  (+2 more)
cli/: CMakeLists.txt
cli/src/: args.cpp  args.hpp  builders.cpp  builders.hpp  cli_error.hpp  dbg.cpp  dbg.hpp  fingerprint.cpp  fingerprint.hpp  info.cpp  info.hpp  main.cpp  patches.cpp  patches.hpp  progress_panel.hpp  subcommands.cpp  subcommands.hpp  util.cpp  util.hpp
core/: CMakeLists.txt
core/include/ember/analysis/: arity.hpp  cfg_builder.hpp  cfg_util.hpp  cfi.hpp  data_xrefs.hpp  demangle.hpp  discovery.hpp  egraph.hpp  eh_frame.hpp  fingerprint.hpp  fn_table.hpp  forge_spec.hpp  frame.hpp  function.hpp  identify.hpp  import_sigs.hpp  indirect_calls.hpp  int3_resolver.hpp  ir_cache.hpp  libcxx_string.hpp  msvc_demangle.hpp  msvc_rtti.hpp  name_resolver.hpp  objc.hpp  packed.hpp  pe_unwind.hpp  pipeline.hpp  rtti.hpp  sig_inference.hpp  sigs.hpp  strings.hpp  symresolve.hpp  symtable.hpp  symuses.hpp  syscalls.hpp  teef.hpp  teef_behav.hpp  teef_orbit.hpp  teef_recognize.hpp  type_infer_local.hpp  (+2 more)
core/include/ember/binary/: arch.hpp  binary.hpp  dol.hpp  elf.hpp  format.hpp  macho.hpp  minidump.hpp  pdb.hpp  pe.hpp  pe_view.hpp  raw_regions.hpp  section.hpp  symbol.hpp
core/include/ember/common/: annotations.hpp  bytes.hpp  cache.hpp  error.hpp  hash.hpp  progress.hpp  threads.hpp  timing.hpp  types.hpp
core/include/ember/debug/: breakpoint.hpp  event.hpp  regs.hpp  target.hpp  types.hpp  unwind.hpp
core/include/ember/decompile/: emit_options.hpp  emitter.hpp
core/include/ember/disasm/: arm64_decoder.hpp  decoder.hpp  instruction.hpp  ppc_decoder.hpp  register.hpp  x64_decoder.hpp
core/include/ember/extension/: decoder_registry.hpp  lifter_registry.hpp  loader_registry.hpp
core/include/ember/ir/: abi.hpp  arm64_lifter.hpp  ir.hpp  lifter.hpp  passes.hpp  ppc_lifter.hpp  ssa.hpp  types.hpp  x64_lifter.hpp
core/include/ember/script/: declarative.hpp  runtime.hpp
core/include/ember/structure/: region.hpp  structurer.hpp
core/src/analysis/: arity.cpp  cfg_builder.cpp  cfg_util.cpp  cfi.cpp  data_xrefs.cpp  demangle.cpp  discovery.cpp  egraph.cpp  eh_frame.cpp  eh_frame_internal.hpp  fingerprint.cpp  forge_spec.cpp  frame.cpp  identify.cpp  import_sigs.cpp  indirect_calls.cpp  int3_resolver.cpp  ir_cache.cpp  libcxx_string.cpp  msvc_demangle.cpp  msvc_rtti.cpp  name_resolver.cpp  objc.cpp  packed.cpp  pe_unwind.cpp  pipeline.cpp  rtti.cpp  sig_inference.cpp  sigs.cpp  strings.cpp  symresolve.cpp  symtable.cpp  symuses.cpp  syscalls.cpp  teef.cpp  teef_behav.cpp  teef_orbit.cpp  teef_recognize.cpp  type_infer_local.cpp  vm_detect.cpp  (+1 more)
core/src/binary/: dol.cpp  elf.cpp  loader.cpp  macho.cpp  minidump.cpp  pdb.cpp  pe.cpp  raw_regions.cpp
core/src/common/: annotations.cpp  cache.cpp
core/src/debug/: target.cpp  unwind_eh.cpp  unwind_rbp.cpp  unwind_scavenge.cpp
core/src/decompile/: emitter.cpp  emitter_helpers.cpp  emitter_helpers.hpp  emitter_regions.inc  emitter_tables.cpp  emitter_tables.hpp
core/src/disasm/: decoder.cpp  instruction.cpp  register.cpp
core/src/extension/: registry.cpp
core/src/ir/: abi.cpp  arm64_lifter.cpp  ir.cpp  lifter.cpp  passes.cpp  ppc_lifter.cpp  ssa.cpp  types.cpp  x64_lifter.cpp
core/src/script/: declarative.cpp  runtime.cpp
core/src/structure/: structurer.cpp
tests/: CMakeLists.txt  annotations_resolver_test.cpp  arm64_decoder_test.cpp  dbg_eh_unwind_test.cpp  dbg_exec_persist_test.cpp  dbg_perf_smoke_test.cpp  dbg_smoke_test.cpp  dbg_test_util.hpp  declarative_test.cpp  demangle_test.cpp  discovery_test.cpp  egraph_test.cpp  forge_spec_test.cpp  int3_resolver_test.cpp  pdb_test.cpp  python_wrapper_test.py  raw_regions_test.cpp  resolve_function_test.cpp  run_cli_expect_fail.cmake  run_golden.cmake  run_intel_promote.cmake  sigs_test.cpp  structurer_fail_test.cpp  teef_corpus_test.cpp  x64_decoder_test.cpp
tests/fixtures/: arith.c  arith_idiom.c  canary.c  dbg_exec_child.c  dbg_exec_parent.c  dbg_target.c  dead_store.c  decoder_misc.c  fp_scalar.ann  fp_scalar.c  global_resolution.c  gotos.c  imports.c  imports.prebuilt  indirect_tail.c  indirect_trace.c  indirect_trace.trace  macho_tiny_phase2.js  macho_tiny_scan.js  make_arm64_tiny.py  make_macho_tiny.py  make_minidump_pe.py  make_minidump_tiny.py  make_pe32_bad.py  make_pe_pdb.py  make_pe_rich.py  make_pe_tiny.py  make_ppc64_tiny.py  make_vm_loop_pe.py  mem_forward.c  noreturn_import.c  partial_reg.c  pe_rich_scan.js  pe_tiny_scan.js  ppc32be_dol.map  printf_noise.c  return_value.ann  return_value.c  return_value.ember  string_cmp.c  (+11 more)
tests/fixtures/raw_regions_tiny/: regions.txt
tests/golden/: arith.divmod_runtime.pseudo.txt  arith.dowhile_with_skip.pseudo.txt  arith_idiom.abs_i32.pseudo.txt  arith_idiom.abs_i64.pseudo.txt  arith_idiom.neg_i32.pseudo.txt  arm64_tiny.disasm.txt  arm64_tiny.pseudo.txt  arm64_tiny.ssa.txt  canary.uses_buffer.pseudo.txt  dead_store.redundant.pseudo.txt  decoder_misc.block_copy.pseudo.txt  decoder_misc.set_and_swap.pseudo.txt  decoder_misc.sse_memclr.pseudo.txt  fp_scalar.clamp_f.pseudo.txt  fp_scalar.hypot2.pseudo.txt  fp_scalar.max_d.pseudo.txt  fp_scalar.mix.pseudo.txt  fp_scalar.poly.pseudo.txt  fp_scalar.single_sum.pseudo.txt  fp_scalar.sum.pseudo.txt  global_resolution.addr_unsized_tail.pseudo.txt  global_resolution.read_after.pseudo.txt  global_resolution.read_unsized_head.pseudo.txt  global_resolution.read_unsized_tail.pseudo.txt  gotos.cleanup_on_fail.pseudo.txt  gotos.multi_exit.pseudo.txt  gotos.shared_tail.pseudo.txt  gotos.stripped.cascade_plan.json.txt  gotos.stripped.cascade_plan.txt  imports.collisions.txt  imports.data_xrefs.txt  imports.fingerprints.txt  imports.functions.main.txt  imports.functions.txt  imports.symtable.dynstr.txt  imports.use_imports.pseudo.txt  imports.validate.main.txt  indirect_tail.via_absolute.pseudo.txt  indirect_tail.via_global.pseudo.txt  indirect_tail.via_member.pseudo.txt  (+100 more)
(+153 files in other folders)
